css/main.css
/*main.css*/


/* 
  COMBINED ELEMENTS -------------------
*/
/*For Product Listing, codes are in flexbox.css*/
/*For Website Grid Structure, codes are in grid.css



/* 
	Overall Typography items

*/


body {
	font-family: 'dosislight';
	line-height: 150%;

	/*prevent horizontal scroll*/
	overflow-x: hidden;
}

h1 {
	font-family: 'dosislight', serif;
	font-size: 3rem;
}

h2 {
	font-family: 'dosislight', sans-serif;
	font-style: bold;
	font-size: 2.5em;
}

h3 {
	font-family: 'dosislight', sans-serif;
	font-style: bold;
	font-size: 1.5em;
}

h4 {
	font-size: 1em;
	text-align: center;
}


ul {
	list-style: none;
}

img {
	height: auto;
	max-width: 100%;
}

figure {
	margin: 0;
} 

#styleguide code{
	margin: 0 0 2em;
	padding: 1em 3em 0 0;
}

#styleguide h4 {
	text-align: left;
	font-family: dosismedium;
}

#styleguide figure {
	margin: 2em 0;
}

/* main page caption */


.welcomeCaption .grid-col-1of3 {
		text-align: center;

}


@media (min-width: 20em){

	.welcomeCaption{
		font-size: 5vw;
		margin: 0 -35vw;
		bottom: 45vw;
	}

	h5{
		font-size: 5vw;
		padding: 4vw 6vw;
	}

}
/*
@media (min-width: 32em){

	.welcomeCaption{
		font-size: 3.2vw;
		bottom: 40vw;
	}
}
*/
/*
@media (min-width: 48em){

	.welcomeCaption{
		font-size: 3vw;
	}

	h5{
		font-size: 1.5vw;
	}
} */

@media (min-width: 40em){
	.welcomeCaption{
		position: relative;
		font-size: 2.8vw;
		color: white;
	/*	left: 50%;
		margin-left: -25%;*/
		bottom: 40vw;
	}

	h5{
		font-size: 1.5vw;
/*		text-align: center;*/
		margin: -2rem 15vw;
		padding: 1vw 3.5vw;
	}

}
.welcomeCaption {
		position: relative;
		display: inline-block;
		font-size: 2.5vw;
		color: white;
		/*top: 25%;*/
		left: 54.5%;
		/*margin-left: -25%;*/
		bottom: 40vw;
		text-shadow: 0.12rem 0.12rem rgba(40,40,40,0.5);
}

h5 {
	font-size: 1vw;
	text-align: center;
	color: white;
	border-style: solid;
	border-width: 1px;
	margin: -2rem 25vw;
	padding: 1vw 3.5vw;
}



.welcomeCaption a{
	position: relative;
	margin-left: 25%;
	/*display: inline-block;*/
	background-color: rgba(240,240,240,0);
	text-decoration: none;
	padding-top: -2vw;
	z-index: 100;

}
/*.welcomeCaption a:hover, .welcomeCaption a:focus {
	background-color: rgb(240, 240, 240);
}*/

h5:hover, h5:focus {
	background-color: rgba(240, 240, 240, 0.2);
}


/*text field*/


input, textarea {
	display: block;
	background-color: #EDEBFF;
	font-family: dosislight;
	font-size: 80%;
	padding: 0.1em 0.5em;
}

input:focus, textarea:focus {
	background-color: white;
}

/* 
  TEXT ELEMENTS -------------------
*/
p a, ul a{
	text-decoration: none;
	color: #14C89A;
}

p a:hover, p a:focus, ul a:hover, ul a:focus {
	text-decoration: underline;
	text-decoration-color: #8D4595;
}


/* 

MAIN NAVIGATION MENU, IMAGE, BODY CONTENT 

*/

.contentBody{
	padding: 1.5rem 3rem 0 3rem;
}

.full-width {
	width: 100vw;
	position: relative;
	left: 30%;
	right: 30%;
	margin: -1vw -30vw -1vw -30vw;
}
/*
@media (min-width: 40em) {
	.full-width {
		width: 100vw;
	}
}
*/

/*about us page text elements STARTS*/

#companyinfo p {
	padding: 1em 0;
	margin: 0 5em 0 0;
}

#companyinfo .grid-col-1of2 {
	padding: 3em 0em 0 6em;
}

/*about us page text elements ENDS*/



/* company news section on index page */

#companynews {
	position: relative;
	float: left;
	padding: 2em 0;
	height: 100%;
	margin-top: -13rem;
}

#companynews p {
	text-align: left;
	padding: 1.5em 5.2em;
	margin: 0;
}

#companynews .grid-col-1of3 {
	text-align: center;
}
/*
#slideshow{
	margin-bottom: -30rem;
}

figure.full-width{
	margin-bottom: -10rem;
} 
*/
h3.contactUs{
	margin-bottom: 0rem;
}
p.contactUs{
	font-size: 0.95rem;
	margin-bottom: -1rem;
}


/* SIDEBAR NAVIGATION */

#sidebar {
	float: left;
	padding: 0;
	position: relative;

	top: 0em;
	left: 0;
	bottom: 0;

	height: 100%;

}

.sidebar-item {
	padding: 0.75em 0.25em;
	text-decoration: none;
	border-bottom: 1px solid black;
}

.sidebar-items a {
	padding: 0 1em;
	text-decoration: none;
	font-size: 1.2rem;
	padding: 0.25em 0.5em;
	display: block;
}

.sidebar-item:hover, .sidebar-item:focus {
	background-color: rgb(220, 220, 220);
}



/*

 FOOTER 

*/

#footer {
	position: relative;
	float: bottom;
	left: 0;
	/*text-align: center;*/
	padding-top: .5em;
	width: 100%;
	z-index: -100;
}

#footer a {
	text-decoration: none;
	height: 10em;
}

#footer .logo {
	padding-top: 4.5em;
}

.icons {
	padding-top: 1.5em;
}

.icon {
	width:2em;
	height: 2em;
	margin:0 .2em 0;
}

#footer ul {
	margin-top: 0;
	padding-left: 0;
}

#footer .grid-col-1of4 {
	text-align: center;
	font-size: 0.85em;
	margin: 3rem 0 2.5rem;

	height: 5.5em;
	border-left: .1em solid rgba(0,0,0,.06);
	border-right: .1em solid rgba(0,0,0,.06);
}





/* 

for adjusting the section in item gallery

*/

.giftShopGallery{
	display: inline-block;
	margin-top: 2rem;
	margin-right: 5rem;
	margin-left: 5rem;
	z-index: 100;
}

@media (min-width: 48em){
	.galleryLine{
		display: inline-block;
		padding-bottom: -5rem;
	}
}
.galleryLine{
	display: flex;
	padding-bottom: -5rem;
}



.itemParagraph{
	margin-top: 3rem;
	display: inline-block;
}

.itemHover{
	margin:0;
	margin-bottom: 0.3rem;
	display: block;
	-webkit-transition: opacity 0.4s ease-out;
  	transition: opacity 0.4s ease-out;
}

.itemHover:active, .itemHover:hover, .itemHover:focus{
	opacity: 0.5;
}

.logo{
	margin-top: -3rem;
	margin-bottom: -0.5rem;
	margin-right: 1rem;
}


/* Nav Buttons */

.navMain, .navMainMobile{
	position: fixed;
	background-color: rgb(250,250,250);

	top: 0;
	right: 0;
	left: 0;

	z-index: 10; /* for elements that have position value set */
}

.navMainLogo{
	color: rgb(0,0,0);
	/*background-image: url("../img/logo.png");*/
	display: inline-block;
	font-family: RumRaisin;
	/*background-color: rgb(220, 220,220 );*/
	background-color: rgb(250,250,250);
	font-size: 1.5rem;
	padding: 1.25rem 0rem;
	margin: auto;
	text-align: center;
	width: 15rem;
	height: auto;
	text-decoration: none;
}

.navMainItem, a.navMainItem, #nav-toggle {
	display: inline-block;
	color: black; /*what is this for?*/
	background-color: rgb(250,250,250);
	font-size: 1.2rem;
	font-family: dosislight;
	float: right;
	padding: 1.25rem 1.5rem;
	margin: auto -0.2rem;

	text-decoration: none;
	text-align: center;
	transition: background-color 0.15s ease-out;
}


.navMainItem:active, .navMainItem:hover, .navMainItem:focus {
	color: white;
	background-color: rgb(20, 200, 154);
}

.button-submit-reset {
	display: inline-block;
	padding: 0.5em 1em;
	color: white;
	font-family: dosismedium;
	background-color: rgb(20, 200, 154);
	/*border-radius: 0.3em;*/
	text-decoration: none;
	-webkit-transition: background-color 0.5s ease-out;
  	transition: background-color 0.5s ease-out;
}

.button-submit-reset:hover, .button-submit-reset:focus {
	background-color: rgb(120, 120, 120);
}

/* for hidden mobile menu */
#navToggle {
	display: block;
	border: 0;
}


#navToggle:hover, #nav-toggle:focus {
	color: white;
	background-color: rgb(20, 200, 154);
}

#navToggle.hidden, #navCollapse.hidden, #navMain.hidden, #navMainMobile.hidden{
	visibility: hidden;
	display: none;
}
.hidden {
	visibility: hidden;
	/*height: 0;*/
}

@media (max-width: 48em) {

	.navMain {
		position: fixed;
	}

	.navMainItem {
		float: left;
		width: 100%;
		text-align: left;
	}
}



/*.navMainLogo:active, .navMainLogo:hover, .navMainLogo:focus {
	color: white;
	background-color: rgb(20, 200, 154);
}*/



/* item contents */
.itemContent{
	/*padding-left: -1rem;*/
}
/* DONT NEED THIS??? */
a.logo {
	font-family: RumRaisin;
}


/* food menu list stuff*/
#foodItems{

}



.menuItenPara{
	padding-left: 100rem;
}

.foodItemImg{
	padding-right: 2rem;
}

